--- a/pages/streams.html
+++ b/pages/streams.html
@@ -57,6 +57,37 @@
       player.setMuted(false);
     }
   </script>
+  
+  <script type="text/javascript">
+    var options = {
+      channel: "Squallne", // TODO: Change this to the streams username you want to embed
+      width: 640,
+      height: 360,
+    };
+    var player = new Twitch.Player("twitch", options);
+
+    player.addEventListener(Twitch.Player.READY, initiate)
+
+    function initiate() {
+      player.addEventListener(Twitch.Player.ONLINE, handleOnline);
+      player.addEventListener(Twitch.Player.OFFLINE, handleOffline);
+      player.removeEventListener(Twitch.Player.READY, initiate);
+    }
+
+    function handleOnline() {
+      document.getElementById("twitch").classList.remove('hide');
+      player.removeEventListener(Twitch.Player.ONLINE, handleOnline);
+      player.addEventListener(Twitch.Player.OFFLINE, handleOffline);
+      player.setMuted(false);
+    }
+
+    function handleOffline() {
+      document.getElementById("twitch").classList.remove('hide');
+      player.removeEventListener(Twitch.Player.OFFLINE, handleOffline);
+      player.addEventListener(Twitch.Player.ONLINE, handleOnline);
+      player.setMuted(false);
+    }
+  </script>
 
 </body>
 </html>
