--- a/pages/streams.html
+++ b/pages/streams.html
@@ -57,7 +57,37 @@
       player.setMuted(false);
     }
   </script>
+
+</body>
   
+<head>
+  <style>
+    .hide { display:none; }
+
+    /* Optional: The following css just makes sure the twitch video stays responsive */
+    #twitch {
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 */
+      padding-top: 25px;
+      height: 0;
+    }
+    #twitch object, #twitch iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+    </style>
+</head>
+
+<body>
+
+  <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
+
+  <div id="twitch" class="hide">
+  </div>
+
   <script type="text/javascript">
     var options = {
       channel: "Squallne", // TODO: Change this to the streams username you want to embed
