--- a/pages/streams.html
+++ b/pages/streams.html
@@ -1,23 +1,21 @@
+<!doctype html>
 <html>
-<head>
-  <style>
-    .hide { display:none; }
 
-    /* Optional: The following css just makes sure the twitch video stays responsive */
-    #twitch {
-      position: relative;
-      padding-bottom: 56.25%; /* 16:9 */
-      padding-top: 25px;
-      height: 0;
-    }
-    #twitch object, #twitch iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-    </style>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Oblivion</title>
+
+    <link rel="stylesheet" href="../stylesheets/styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="stylesheet" href="../stylesheets/raiding.css">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta name="viewport" content="width=device-width">
+
+    <script type="text/javascript" src="../javascripts/scale.fix.js"></script>
+    <script type="text/javascript" src="../javascripts/kill-count.js"></script>
+    <script type="text/javascript" src="../javascripts/navigation.js"></script>
 </head>
 
 <body>
