--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -56,6 +56,8 @@
             <li><a href="/oblivionguild/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>
             <!--<li><a href="/oblivionguild/pages/videos">Videos/</a></li>-->
             <li><a href="https://wago.io/p/squallne" class="flex-row" target="_blank" rel="noopener noreferrer"><span>WEAKAURAS</span><i class="material-icons md-18">navigate_next</i></a></li>
+            <li><a href="https://sheffywow.github.io/oblivionguild/pages/streams" class="flex-row"><span>STREAMS </span><i
+                        class="material-icons md-18">navigate_next</i></a></li>
         </ul>
 
         <a class="github-link display-desktop" href="https://github.com/SheffyWoW/oblivionguild"><span class="flex-row">View on GitHub<i class="material-icons md-18 open-new-icon">open_in_new</i></span> <small>github/oblivionguild</small></a>
