--- a/pages/roster.html
+++ b/pages/roster.html
@@ -57,13 +57,15 @@
             <li><a href="https://sheffywow.github.io/oblivionguild" class="flex-row"><span>HOME </span><i class="material-icons md-18">navigate_next</i></a>
             </li>
 
-            <li><a href="https://sheffywow.github.io/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
+            <li><a href="/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
                         class=" material-icons md-18">navigate_next</i></a></li>
-            <li><a href="https://sheffywow.github.io/oblivionguild/pages/roster" class="flex-row"><span class="emphasize">ROSTER</span><i
+            <li><a href="/oblivionguild/pages/roster" class="flex-row"><span class="emphasize">ROSTER</span><i
                         class="emphasize material-icons md-18">navigate_next</i></a></li>
             <!--<li><a href="/oblivionguild/pages/videos">Videos/</a></li>-->
             <li><a href="https://wago.io/p/squallne" class="flex-row" target="_blank"
                     rel="noopener noreferrer"><span>WEAKAURAS</span><i
+                        class="material-icons md-18">navigate_next</i></a></li>
+            <li><a href="/oblivionguild/pages/streams" class="flex-row"><span>STREAMS </span><i
                         class="material-icons md-18">navigate_next</i></a></li>
         </ul>
 
