--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
         </button>
 
         <ul class="legend">
-            <li><a href="https://sheffywow.github.io/oblivionguild/" class="flex-row"><span class="emphasize">HOME </span><i
+            <li><a href="/oblivionguild/" class="flex-row"><span class="emphasize">HOME </span><i
                         class="emphasize material-icons md-18">navigate_next</i></a></li>
             <li><a href="/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
                         class="material-icons md-18">navigate_next</i></a></li>
-            <li><a href="/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>
+            <li><a href="/oblivionguild/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>
             <!--<li><a href="oblivionguild/pages/videos">Videos/</a></li>-->
             <li><a href="https://wago.io/p/squallne" target="_blank" rel="noopener noreferrer" class="flex-row"><span>WEAKAURAS</span><i
                         class="material-icons md-18">navigate_next</i></a></li>
-            <li><a href="https://sheffywow.github.io/oblivionguild/pages/streams" class="flex-row"><span>STREAMS </span><i
+            <li><a href="/oblivionguild/pages/streams" class="flex-row"><span>STREAMS </span><i
                         class="material-icons md-18">navigate_next</i></a></li>
         </ul>
 
