--- a/pages/roster.html
+++ b/pages/roster.html
@@ -232,7 +232,7 @@
             
             <div class="player-card">
                 <img class="germany">
-                <strong class="shaman">SHEFFY</strong>
+                <strong class="shaman"><a href="https://www.warcraftlogs.com/character/id/36531926">SHEFFY</strong>
                 <img class="class shaman">
             </div>
             
