--- a/pages/streams.html
+++ b/pages/streams.html
@@ -33,7 +33,65 @@
   </style>
 </head>
 
-<body>
+<body class="flex-row reset-gutter">
+    <nav class="mobile-menu flex-row display-mobile">
+        <i class="material-icons md-36 mobile-menu-icon" onclick="openNav()">menu</i>
+        <h1 class="main-header nav-header"><a href="https://sheffywow.github.io/oblivionguild/">OBLIVION</a></h1>
+    </nav>
+
+    <nav class="flex-col navigation" id="navigation">
+        <header>
+            <h1 class="main-header nav-header display-desktop"><a href="https://sheffywow.github.io/oblivionguild/">OBLIVION</a></h1>
+            <i class="material-icons md-36 mobile-menu-icon close-icon display-mobile" onclick="closeNav()">close</i>
+        </header>
+
+        <ul class="flex-row icons">
+            <li class="wowprogress-bg">
+                <!-- wowprogress favicon is so fucking scuffed that I just re-created it manually -->
+                <a href=https://www.wowprogress.com/guild/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><span class="wowprogress">W</span></a>
+            </li>
+            <li>
+                <a href=https://raider.io/guilds/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/raiderio.png" alt="raiderio"></a>
+            </li>
+
+            <li>
+                <a href=https://www.warcraftlogs.com/guild/calendar/56317 target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></a>
+            </li>
+        </ul>
+
+        <button class="button">
+            <a href="https://docs.google.com/forms/d/1l9cmVak1sj0khKXrwM1TPaDcbWHRt3GA8wIcr7lhYjU" class="apply" target="_blank" rel="noopener noreferrer">APPLY</a>
+        </button>
+
+        <ul class="legend">
+            <li><a href="/oblivionguild/" class="flex-row"><span class="emphasize">HOME </span><i
+                        class="emphasize material-icons md-18">navigate_next</i></a></li>
+            <li><a href="/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
+                        class="material-icons md-18">navigate_next</i></a></li>
+            <li><a href="/oblivionguild/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>
+            <!--<li><a href="oblivionguild/pages/videos">Videos/</a></li>-->
+            <li><a href="https://wago.io/p/squallne" target="_blank" rel="noopener noreferrer" class="flex-row"><span>WEAKAURAS</span><i
+                        class="material-icons md-18">navigate_next</i></a></li>
+            <li><a href="/oblivionguild/pages/streams" class="flex-row"><span>STREAMS </span><i
+                        class="material-icons md-18">navigate_next</i></a></li>
+        </ul>
+
+        <a class="github-link display-desktop" href="https://github.com/SheffyWoW/oblivionguild" target="_blank" rel="noopener noreferrer"><span class="flex-row">View on GitHub<i
+                    class="material-icons md-18 open-new-icon">open_in_new</i></span>
+            <small>github/oblivionguild</small></a>
+    </nav>
+
+    <section class="main-content flex-col">
+        <div class="text-content">
+            <p>Ihr könnt unseren Progress aus verschiedenen POVs verfolgen:</p>
+            <p>Squallne - Hunter POV (Raid Lead)
+            <p>Andredegiant - Warrior POV
+            <p>Kontraos - Windfury POV
+            <p>Fluttershy - Paladin/Tank POV
+            <p>Sheffy - Elemental POV
+            </p>
+
+            </div>
 
   <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
 
