--- a/pages/streams.html
+++ b/pages/streams.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Oblivion</title>
 
-    <link rel="stylesheet" href="../stylesheets/styles.css">
-    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
-
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="stylesheets/styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script type="text/javascript" src="../javascripts/kill-count.js"></script>
+    <script src="javascripts/scale.fix.js"></script>
+    <script src="javascripts/kill-count.js"></script>
+    <script src="javascripts/navigation.js"></script>
     <meta name="viewport" content="width=device-width">
-
-    <script type="text/javascript" src="../javascripts/navigation.js"></script>
     
   <style>
 
