--- a/pages/streams.html
+++ b/pages/streams.html
@@ -33,11 +33,11 @@
                 <a href=https://www.wowprogress.com/guild/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><span class="wowprogress">W</span></a>
             </li>
             <li>
-                <a href=https://raider.io/guilds/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/raiderio.png" alt="raiderio"></a>
+                <a href=https://raider.io/guilds/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><img class="icon" src="../assets/media/icons/raiderio.png" alt="raiderio"></a>
             </li>
 
             <li>
-                <a href=https://www.warcraftlogs.com/guild/calendar/56317 target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></a>
+                <a href=https://www.warcraftlogs.com/guild/calendar/56317 target="_blank" rel="noopener noreferrer"><img class="icon" src="../assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></a>
             </li>
         </ul>
 
