--- a/pages/streams.html
+++ b/pages/streams.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="javascripts/scale.fix.js"></script>
-    <script src="javascripts/navigation.js"></script>
+    <script src="../javascripts/scale.fix.js"></script>
+    <script src="../javascripts/navigation.js"></script>
     <meta name="viewport" content="width=device-width">
     
 </head>
