--- a/pages/streams.html
+++ b/pages/streams.html
@@ -73,7 +73,28 @@
             <p>Fluttershy - Paladin/Tank POV
             <p>Sheffy - Elemental POV
             </p>
-
             </div>
     </section>
+   
+<!-- Twitch Channel Embedded-->
+<div class="row" align="center">
+  <h2>My Twitch Channel</h2>
+  <!-- Add a placeholder for the Twitch embed -->
+   <div id="twitch-embed"></div>
+
+   <!-- Load the Twitch embed script -->
+   <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+   <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
+   <script type="text/javascript">
+     new Twitch.Embed("twitch-embed", {
+       width: "100%",
+       height: 480,
+       channel: "SheffyWoW",
+       muted: true
+     });
+   </script>
+   <!-- More Embed Options: https://dev.twitch.tv/docs/embed/ -->
+ </div>
+    
 </html>
