Add BoD + Uldir + Antorus kill videos

--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -641,7 +641,7 @@
                 <div id="boss-container" class="flex-col">
                     <p>Jaina Proudmoore</p>
 
-                    <a href="https://www.youtube.com/watch?v=QAh-xPyaYf" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=iG6Fre0sFc8" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">96</p>
                     <div class="flex-row bottom-row">
@@ -651,7 +651,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Stormwall Blockade</p>
-                    <a href="https://www.youtube.com/watch?v=WqduJZp2iRI" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=KbAmmwl4cJg" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">94</p>
                     <div class="flex-row bottom-row">
@@ -661,7 +661,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>High Tinker Mekkatorque</p>
-                    <a href="https://www.youtube.com/watch?v=WWyvH3k5ETU" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=3S_xB0Hx9PU" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">124</p>
                     <div class="flex-row bottom-row">
@@ -671,7 +671,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>King Rastakhan</p>
-                    <a href="https://www.youtube.com/watch?v=68SAsAXmFpU" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=3R7gHpqBCPQ" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">88</p>
                     <div class="flex-row bottom-row">
@@ -681,7 +681,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Conclave of the Chosen</p>
-                    <a href="https://www.youtube.com/watch?v=6RbOv3PgWkQ" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=8aLySoYo42s" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">116</p>
                     <div class="flex-row bottom-row">
@@ -691,6 +691,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Opulence</p>
+                    <a href="https://www.youtube.com/watch?v=QI5ChJTP5Zo" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">67</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 16</p>
@@ -699,6 +700,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Jadefire Masters</p>
+                    <a href="https://www.youtube.com/watch?v=WWQUDvTn7U4" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">333</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 9</p>
@@ -707,7 +709,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Grong</p>
-                    <a href="https://www.youtube.com/watch?v=i5602ZL8dpo" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=e0kbzM2TMHg" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">213</p>
                     <div class="flex-row bottom-row">
@@ -740,7 +742,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>G'huun</p>
-                    <a href="https://www.youtube.com/watch?v=1Eu_mmBALh4" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=1QRyDOFKZ7c" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">140</p>
                     <div class="flex-row bottom-row">
@@ -749,7 +751,8 @@
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
-                    <p>Mythrax the Unraveler</p>
+                    <p>Mythrax the Unraveler</p>https://www.youtube.com/watch?v=tzLYIqavka8
+                    <a href="https://www.youtube.com/watch?v=1QRyDOFKZ7c" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">110</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 91</p>
@@ -758,6 +761,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Zul</p>
+                    <a href="https://www.youtube.com/watch?v=ekY9Z2Qg1dM" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">143</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 56</p>
@@ -766,6 +770,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Fetid Devourer</p>
+                    <a href="https://www.youtube.com/watch?v=ziQLUcqYE4M" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">150</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 137</p>
@@ -774,7 +779,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Vectis</p>
-                    <a href="https://www.youtube.com/watch?v=R1Td1O3_TAs" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=Gq3N9E8AQRs" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">114</p>
                     <div class="flex-row bottom-row">
@@ -783,7 +788,7 @@
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
-                    <a href="https://www.youtube.com/watch?v=J1ytHFZ_0EM" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=YYD2qzwf1sU" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p>Zek'voz, Herald of N'Zoth</p>
                     <p class="world-rank">178</p>
@@ -794,6 +799,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>MOTHER</p>
+                    <a href="https://www.youtube.com/watch?v=meofTz_cUuE" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">308</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 20</p>
@@ -802,6 +808,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Taloc</p>
+                    <a href="https://www.youtube.com/watch?v=8PN_Cy1bcv0" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">316</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 3</p>
@@ -825,7 +832,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Argus the Unmaker</p>
-                    <a href="https://www.youtube.com/watch?v=CUc-7W9aBW4" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=fO4ecfkoZ-4" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">78</p>
                     <div class="flex-row bottom-row">
@@ -835,7 +842,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Aggramar</p>
-                    <a href="https://www.youtube.com/watch?v=VoiE9ApQCZg" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=3DIyNbZBucM" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">110</p>
                     <div class="flex-row bottom-row">
@@ -845,6 +852,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>The Coven of Shivarra</p>
+                    <a href="https://www.youtube.com/watch?v=a2BwpnRh8Cc" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">96</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 38</p>
@@ -853,6 +861,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Varimathras</p>
+                    <a href="https://www.youtube.com/watch?v=XdLszMU-a70" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">99</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 47</p>
@@ -861,6 +870,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Kin'garoth</p>
+                    <a href="https://www.youtube.com/watch?v=GGmKxHt5rh0" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">98</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 21</p>
@@ -869,6 +879,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Imonar the Soulhunter</p>
+                    <a href="https://www.youtube.com/watch?v=4utlWUUCMCY" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">140</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 59</p>
@@ -877,6 +888,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Eonar</p>
+                    <a href="https://www.youtube.com/watch?v=FdCtIk3kz_4" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">76</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 4</p>
@@ -885,6 +897,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Portal Keeper Hasabel</p>
+                    <a href="https://www.youtube.com/watch?v=ctK968L55ko" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">94</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 6</p>
@@ -893,6 +906,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Antoran High Command</p>
+                    <a href="https://www.youtube.com/watch?v=h46NgLsv1gE" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">61</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 5</p>
@@ -901,6 +915,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Felhounds of Sargeras</p>
+                    <a href="https://www.youtube.com/watch?v=n5a4bse7-QY" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">78</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 3</p>
@@ -909,6 +924,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Garothi Worldbreaker</p>
+                    <a href="https://www.youtube.com/watch?v=Y_UkTV4wH74" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">209</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 1</p>
