Fix Mythrax video link

--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -751,8 +751,8 @@
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
-                    <p>Mythrax the Unraveler</p>https://www.youtube.com/watch?v=tzLYIqavka8
-                    <a href="https://www.youtube.com/watch?v=1QRyDOFKZ7c" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <p>Mythrax the Unraveler</p>
+                    <a href="https://www.youtube.com/watch?v=tzLYIqavka8" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">110</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 91</p>
