--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -1043,12 +1043,12 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Gul'dan</p>
-                    <a href="https://www.youtube.com/watch?v=oKR1ygzdRcs" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=0uCB_vAtSK8" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">130</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: 155</p>
-                        <p class="subtitle">Apr 5, 2017</p>
+                        <p class="subtitle">Wipes: 267</p>
+                        <p class="subtitle">Apr 12, 2017</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
@@ -1056,12 +1056,11 @@
                     <p class="world-rank">98</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 98</p>
-                        <p class="subtitle">Mar 16, 2017</p>
+                        <p class="subtitle">Mar 13, 2017</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Star Augur Etraeus</p>
-                    <a href="https://www.youtube.com/watch?v=odSflIrhMuE" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">105</p>
                     <div class="flex-row bottom-row">
@@ -1087,7 +1086,6 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Spellblade Aluriel</p>
-                    <a href="https://www.youtube.com/watch?v=OZw4fIL8Zb0" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">68</p>
                     <div class="flex-row bottom-row">
@@ -1097,7 +1095,6 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Krosus</p>
-                    <a href="https://www.youtube.com/watch?v=yPOMYK5zVwE" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">231</p>
                     <div class="flex-row bottom-row">
@@ -1146,7 +1143,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Helya</p>
-                    <a href="https://www.youtube.com/watch?v=10QMx_4HmoI" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=YE_yhazQZR4" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">116</p>
                     <div class="flex-row bottom-row">
@@ -1187,6 +1184,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Xavius</p>
+                    <a href="https://www.youtube.com/watch?v=l0pFmUN4XDc" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">103</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 5</p>
@@ -1258,7 +1256,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Archimonde</p>
-                    <a href="https://www.youtube.com/watch?v=KhaUEtUjXsA" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href="https://www.youtube.com/watch?v=8ADUwJTc9Ew" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
@@ -1268,7 +1266,6 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Hellfire High Council</p>
-                    <a href="https://www.youtube.com/watch?v=IZn6leCJzT4" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">90</p>
                     <div class="flex-row bottom-row">
@@ -1287,7 +1284,6 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Iron Reaver</p>
-                    <a href="https://www.youtube.com/watch?v=v-9UzEakc1Y" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">64</p>
                     <div class="flex-row bottom-row">
@@ -1297,7 +1293,6 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Hellfire Assault</p>
-                    <a href="https://www.youtube.com/watch?v=38MnvK_HzcQ" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">93</p>
                     <div class="flex-row bottom-row">
@@ -1323,6 +1318,7 @@
                 <div id="boss-container" class="flex-col">
                     <p>Blackhand</p>
                     <p class="world-rank">???</p>
+                    <a href="https://www.youtube.com/watch?v=v033uywCtkg" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 220</p>
                         <p class="subtitle">Mar 28, 2015</p>
@@ -1330,7 +1326,6 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>The Blast Furnace</p>
-                    <a href="https://www.youtube.com/watch?v=4GTK-EHg4YA" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">117</p>
                     <div class="flex-row bottom-row">
@@ -1340,7 +1335,6 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>The Iron Maidens</p>
-                    <a href="https://www.youtube.com/watch?v=PphNTlQ69Mk" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">114</p>
                     <div class="flex-row bottom-row">
@@ -1368,7 +1362,6 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Flamebender Ka'graz</p>
-                    <a href="https://www.youtube.com/watch?v=aqEE9PGBaEU" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">91</p>
                     <div class="flex-row bottom-row">
@@ -1378,7 +1371,6 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Hans'gar and Franzok</p>
-                    <a href="https://www.youtube.com/watch?v=xRPgJT-E_ik" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">222</p>
                     <div class="flex-row bottom-row">
@@ -1429,6 +1421,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Imperator Mar'gok</p>
+                    <a href="https://www.youtube.com/watch?v=UvPMvSRTVyI" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: -</p>
